<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TARES</string>
    <string name="debut">An easy app to manage your all payment and finance related needs.</string>
    <string name="sur_tares">SUR TARES</string>
    <string name="bienvenue">BIENVENUE</string>
    <string name="mobile">Please enter the mobile phone number</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="banks">We\'ve found 5 banks accounts belongs for you</string>
    <string name="bank_1">Bank 1</string>
    <string name="bank_2">Bank 2</string>
    <string name="bank_3">Bank 3</string>
    <string name="bank_4">Bank 4</string>
    <string name="_3654">*****3654</string>
    <string name="new_btn">+Add New</string>
    <string name="send_again">SEND AGAIN</string>
    <string name="destinataire">Sélectionnez le compte destinataire</string>
    <string name="contact">MY CONTACTS</string>
    <string name="schizue_finnerty">Schizue Finnerty</string>
    <string name="num">9812345678</string>
    <string name="montant">Entrez le montant de votre transaction</string>
    <string name="nombre">$ 0,00</string>
    <string name="next">Next</string>
    <string name="ajouter">Ajouter</string>
    <string name="scan">Scan</string>
    <string name="touch">Please touch the fingerprint sensor to login</string>
    <string name="phone_number">Phone Number</string>
    <string name="_229">+229</string>
    <string name="_67823840">67 82 38 40</string>
    <string name="already">Already have account ?</string>
    <string name="signin">Sign in</string>
    <string name="get_started">Get Started</string>
    <string name="votre_pays">Votre pays</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_with_pin">Login with pin</string>
    <string name="login_using_fingerprint">Login using Fingerprint</string>
    <string name="profil">PROFIL</string>
    <string name="modifier_profil">Modifier profile</string>
    <string name="partager_son_profil">Partager son Profil</string>
    <string name="centre_de_message">Centre de Messages</string>
    <string name="parametres_de_securite">Paramètres de Sécurité</string>
    <string name="notifications">Notifications</string>
    <string name="news_letters">News Letters</string>
    <string name="aides_contacts">Aide et Contacts</string>
    <string name="mentions_legales">Mentions Légales</string>
    <string name="contacts">Contacts</string>
    <string name="aide">Aide</string>
    <string name="_48_secondes">48 Seconds</string>
    <string name="please_enter_the_otp_sent_on_your_mobile_phone_number">Please enter the OTP sent on your mobile phone number.</string>
    <string name="verification_code">Verification code</string>
    <string name="entrez_votre_code">Entrez votre code</string>
    <string name="language_text">FR</string>
    <string name="michelle_bella">Michelle Bella</string>
    <string name="nextBtn"><![CDATA[Next >>]]></string>
    <string name="profile_image">Image de Profil</string>
    <string name="email_example">michellebella@gmail.com</string>
    <string name="nouvelle_transaction">Nouvelle Transaction</string>
    <string name="gestion_compte">Gestion de Compte</string>
    <string name="parametres">Paramètres</string>
    <string name="historique_transaction">Historique des Transactions</string>
    <string name="quitter">Fermer</string>
    <string name="_229_90_91_92_93">+229 90 91 92 93</string>
    <string name="_3">3</string>
    <string name="comptes">Comptes</string>
    <string name="help">Help</string>
    <string name="ask_question">Ask Question</string>
    <string name="verified">Verified</string>
    <string name="how_can_we_help">How can we help?</string>
    <string name="referral_bonus"><![CDATA[Referral & Bonus]]></string>
    <string name="payment">Payment</string>
    <string name="refund">Refund</string>
    <string name="statements_due"><![CDATA[Statements & Due Amount]]></string>
    <string name="rewards">Rewards</string>
    <string name="card_manage">Card Management</string>
    <string name="cashback">Cashback</string>
    <string name="more_help">Need more help?</string>
    <string name="inscription">Inscription</string>
    <string name="adresse">Adresse Email :</string>
    <string name="maurelcodo_gmail_com">maurelcodo_gmail_com</string>
    <string name="votre_mot_de_passe">Mot de Passe :</string>
    <string name="password">....................</string>
    <string name="confirmation_mot_de_passe">Confirmer mot de passe :</string>
    <string name="continuer">CONTINUER</string>
    <string name="entrez_votre_nom_et_prenoms">Votre nom et vos prénoms</string>
    <string name="votre_nom">Nom :</string>
    <string name="dubois">DuBois</string>
    <string name="vos_prenoms">Prénoms :</string>
    <string name="alexandre">Alexandre</string>
    <string name="entrez_votre_adresse_postale">Votre adresse postale ici</string>
    <string name="informations_connaxion">Informations de connexion</string>
    <string name="votre_adresse">Adresse postale :</string>
    <string name="paris_rue12">paris_rue12</string>
    <string name="envoyer">ENVOYER</string>
    <string name="hsbc">HSBC</string>
    <string name="votre_solde">Votre Solde :</string>
    <string name="_85_625">$85,625</string>
    <string name="_8_500">$8,500</string>
    <string name="_1_200">-1,200</string>
    <string name="transactions_r_centes">Transactions Récentes</string>
    <string name="_3_289">-3,289</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="_6_275">+6,275</string>
    <string name="amazon_control_manager">Amazon control manager</string>
    <string name="amazon_pay">Amazon Pay</string>
    <string name="history">History</string>
    <string name="november_12_tuesday">November 12, Tuesday</string>
    <string name="november_06_wednesday">November 06, Wednesday</string>
    <string name="november_04_monday">November 04, Monday</string>
    <string name="cards">Cards</string>
    <string name="selectionnez_le_compte_d_envoi">Selectionnez le compte d\'envoi</string>
    <string name="tares">Tares</string>
    <string name="mtn_mobile_money">MTN Mobile Money</string>
    <string name="soci_te_g_n_rale">Sociéte Générale</string>
    <string name="moov_money">Moov Money</string>
    <string name="orange_money">Orange Money</string>
    <string name="boursorama">Boursorama</string>
    <string name="last_statement_cutstanding">Last Statement Cutstanding</string>
    <string name="due_date">Due Date :</string>
    <string name="_28_nov">28 Nov</string>
    <string name="_85_627">£ 85,627</string>
    <string name="spend_analyser">SPEND ANALYSER</string>
    <string name="shopping">Shopping</string>
    <string name="_26">26%</string>
    <string name="food_drinks"><![CDATA[Food & Drinks]]></string>
    <string name="_10_120">£10,120</string>
    <string name="_2_500">£2,500</string>
    <string name="_14">14%</string>
    <string name="travel_flights">Travel Flights</string>
    <string name="_5">5%</string>
    <string name="fuel">Fuel</string>
    <string name="_15_964">£15,964</string>
    <string name="_15">15%</string>
    <string name="emi">EMI</string>
    <string name="_24_672">£24,672</string>
    <string name="_44">44%</string>
    <string name="others">Others</string>
    <string name="_820">£820</string>
    <string name="_6">6%</string>
    <string name="entrez_le_montant_de_votre_transaction_pour_continuer_svp">Entrez le montant de votre transaction pour continuer SVP</string>
    <string name="_0_000">0,000</string>
    <string name="currencies_prompt">Selectionnez la monnaie :</string>
    <string name="s_lectionnez_le_compte_d_envoi_pour_continuer_svp">Sélectionnez le compte d\'envoi pour continuer SVP</string>
    <string name="ajouter_un_compte">+ Ajouter un Compte</string>
    <string name="countries_prompt">Sélectionnez votre pays :</string>
    <string name="license">License</string>
    <string name="creativealive_com">CreativeAlive.com</string>
    <string name="info_creativealive_com">info@CreativeAlive.com</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="rights">Rights</string>
    <string name="first_right">You have rights for royalty free use of our ressources for any or all of your personal and commercial projects.</string>
    <string name="second_right">You may modify the ressources according to your requirement and use them royalty free in any or all of your personal and commercial projects. For example, you may include this ressources in a website you will be designed for a client.</string>
    <string name="third_right">You are not required to attribute our link to CreativeAlive in any of your projects. So, CreativeAlive will be not responsible for any outcome that may occur during using of our ressources.</string>
    <string name="fourth_right">We reserve their rights to change prices and revise the ressource usage policy in any given moment.</string>
    <string name="prohibitions">Prohibitions</string>
    <string name="first_prohibitions">You do not have their rights redistribute, resell, lease, license,  sub-license, proffer the file downloaded to any third party.</string>
    <string name="second_prohibitions">For any reasable web applications or software programs, you should not include our graphic ressources as an additional attachment. This will be considerated as a redistribution of our ressources which is of course, forbidden by us.</string>
    <string name="informations_compte">Informations de compte</string>
    <string name="ancien_mot_de_passe">Ancien Mot de Passe :</string>
    <string name="nouveau_mot_de_passe">Nouveau Mot de Passe</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="payment_wallet_app_ui_kit">Payment Wallet App UI Kit</string>
    <string name="about">About</string>
    <string name="first_about">CreativeAlive\'s Payment Wallet App UI Kit is the perfect fit for your next payment wallet app UI Design, it contains ready to use components, Typography, Design System and Customize color palette. With 20+ Unique Layouts we covered almost every aspect of a payment App world require.</string>
    <string name="second_about">At Adobe XD version you will find set of icons are ready and marked for export. Other feature including Open Source Vectors illustrations, for iOS Native Fonts, Scalable Material Icons, End to end full fledge application designed are placed beautifully.</string>
    <string name="first_rule">*  100+ ready to use components</string>
    <string name="second_rule">*  20+ Unique Layouts</string>
    <string name="third_rule">*  Prototype Included — Play with XD</string>
    <string name="fourth_rule">*  Apple iPhone X Compatible</string>
    <string name="fifth_rule">*  1x Resolution</string>
    <string name="sixth_rule">*  iOS Native Fonts — SF Sanfransisco</string>
    <string name="seventh_rule">*  Free Material Icons</string>
    <string name="eighth_rule">*  Design System Included</string>
    <string name="nineth_rule">*  Customizable Color Palette</string>
    <string name="tenth_rule">*  Typography</string>
    <string name="eleventh_rule">*  Free Graphics</string>
    <string name="twelveth_rule">* Avatars — UI Faces</string>
    <string name="credits">Credits</string>
    <string name="fonts">Fonts</string>
    <string name="first_font">SF Sanfransisco Fonts</string>
    <string name="second_font">https://developer.apple.com/fonts/</string>
    <string name="icons">Icons</string>
    <string name="first_icon">Material Icon</string>
    <string name="second_icon">https://material.io/ressources/icons/?style=round</string>
    <string name="avatars">Avatars</string>
    <string name="first_avatar">UI Faces</string>
</resources>